# minkraft

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  index.md
assets/models/: axes.glb
assets/properties/: prop_test.prp
assets/shaders/: array_texture.frag  array_texture.vert  voxel.frag  voxel.vert
assets/textures/voxel-pack/: License.txt
assets/textures/voxel-pack/Spritesheets/: spritesheet_characters.xml  spritesheet_items.xml  spritesheet_particles.xml  spritesheet_tiles.xml
assets/textures/voxel-pack/Vector/: vector_characters.swf  vector_other.swf  vector_tiles_items.swf
crates/bevy-physical-sky/: Cargo.toml  LICENSE  README.md
crates/bevy-physical-sky/assets/shaders/: physical_sky.frag  physical_sky.vert
crates/bevy-physical-sky/examples/: sky_shader.rs  solar_cycle.rs
crates/bevy-physical-sky/src/: lib.rs  solar_position.rs
docs/: DESIGN.md  TODO.md
examples/: voxel_render.rs
scripts/: run.sh
src/: app_state.rs  array_texture.frag  array_texture.vert  character_controller.rs  chunk_generator.rs  debug.rs  diagnostics.rs  fog.rs  generate.rs  level_of_detail.rs  lib.rs  main.rs  mesh_diagnostics.rs  mesh_fade.rs  mesh_generator.rs  prop_test.rs  shaders.rs  shapes.rs  svo_render.rs  trace.rs  types.rs  voxel_map.rs  voxel_render.rs  world_axes.rs
src/utilities/: bevy_util.rs  data_sets.rs  test.rs
src/utilities/bevy_util/: camera.rs  mesh.rs  thread_local_resource.rs
