[package]
name = "minkraft"
version = "0.1.0"
authors = ["Robert Swain <robert.swain@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
bevy = "0.5"
bevy_frustum_culling = { git = "https://github.com/aevyrie/bevy_frustum_culling", rev = "1828259235e7dbc191a731f36c15395789ed2c3f" }
bevy-hud-pass = { git = "https://github.com/superdump/bevy-hud-pass", branch = "main" }
bevy_mod_bounding = "0.1"
bevy-physical-sky = { path = "crates/bevy-physical-sky" }
bevy_prototype_character_controller = { git = "https://github.com/superdump/bevy_prototype_character_controller", branch = "bevy-main", features = [ "use_rapier" ] }
bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier", rev = "bb1abd2903080e9d88f6d6f0712ebfb14c2a93e9", features = [ "parallel", "simd-stable" ] }
building-blocks = { git = "https://github.com/bonsairobo/building-blocks", rev = "4977a3c5e6fbccfab31ab026dc79bd6d943e2c3c" }
env_logger = "0.8"
log = "0.4.11"
simdnoise = "3.1.6"
thread_local = "1.1"

[features]
default = []

[workspace]
members = ["crates/*"]

[profile.dev]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
incremental = false
codegen-units = 1
