[package]
name = "minkraft"
version = "0.1.0"
authors = ["Robert Swain <robert.swain@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
bevy = { git = "https://github.com/superdump/bevy", branch = "main-naga" }
bevy_frustum_culling = { git = "https://github.com/superdump/bevy_frustum_culling", branch = "bevy-main-naga" }
bevy-hud-pass = { git = "https://github.com/superdump/bevy-hud-pass", branch = "bevy-main" }
bevy_mod_bounding = { git = "https://github.com/superdump/bevy_mod_bounding", branch = "bevy-main" }
bevy-physical-sky = { path = "crates/bevy-physical-sky" }
bevy_prototype_character_controller = { git = "https://github.com/superdump/bevy_prototype_character_controller", branch = "bevy-main", features = [ "use_rapier" ] }
bevy_rapier3d = { git = "https://github.com/superdump/bevy_rapier", branch = "bevy-main", features = [ "parallel", "simd-stable" ] }
building-blocks = { git = "https://github.com/bonsairobo/building-blocks", rev = "4977a3c5e6fbccfab31ab026dc79bd6d943e2c3c" }
bytemuck = "1.7"
env_logger = "0.8"
log = "0.4.11"
simdnoise = "3.1.6"
thread_local = "1.1"

[patch.crates-io]
bevy = { git = "https://github.com/superdump/bevy", branch = "main-naga" }
bevy_mod_bounding = { git = "https://github.com/superdump/bevy_mod_bounding", branch = "bevy-main" }
bevy_rapier3d = { git = "https://github.com/superdump/bevy_rapier", branch = "bevy-main", features = [ "parallel", "simd-stable" ] }

[features]
default = []

[workspace]
members = ["crates/*"]

[profile.dev]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
incremental = false
codegen-units = 1
