[package]
name = "bevy-physical-sky"
version = "0.1.0"
authors = ["Robert Swain <robert.swain@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
bevy = "0.5"
bytemuck = "1.7"
chrono = "0.4.19"
spa = { git = "https://github.com/frehberg/spa-rs", rev = "9b0216a6970fdc9b459cc43b76e7b6867a089f9c" }